log/build_2024-11-14_14-08-49/mypkg/stderr.log
  File "/home/aoki/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 5
    rclpy.init()
                 ^
SyntaxError: invalid character in identifier

